[fix] fix query to retrieve data from db
