# helixa_app/api/blueprint.py
@@ -1,5 +1,6 @@
 from flask import Blueprint
 
+from helixa_app.api.v1.db_query_view import DbQueryView
 from helixa_app.api.v1.dict_loop_view import DictLoopView
 from helixa_app.api.v1.status import Status
 
@@ -7,3 +8,4 @@ v1 = Blueprint('api_v1', __name__, url_prefix='/api/v1')
 
 v1.add_url_rule('/status', view_func=Status.as_view('get-status'))
 v1.add_url_rule('/tasks/dict-loop/', view_func=DictLoopView.as_view('dict-loop'))
+v1.add_url_rule('/tasks/db-query/', view_func=DbQueryView.as_view('db-query'))
