# helixa_app/static/swagger.json
@@ -79,6 +79,33 @@
           }
         }
       }
+    },
+    "/api/v1/tasks/db-query/": {
+      "post": {
+        "summary": "Get value with db-query strategy",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "description": "The body payload",
+            "schema": {
+              "$ref": "#/components/schemas/requestPostBody"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Error in handling the request data"
+          }
+        }
+      }
     }
   }
 }
